--- a/app/package.json
+++ b/app/package.json
@@ -12,10 +12,12 @@
     "test-server": "WEBSITE_URL=http://localhost:4001 node node_modules/exit_on_eof/index.js 'node_modules/next/dist/bin/next -p 3001' > /dev/null"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "graphql": "^14.6.0",
     "isomorphic-unfetch": "^2.0.0",
-    "next": "^4.1.3",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "next": "^9.2.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "exit_on_eof": "^1.0.4"
